VSE Rendering and Scene Strip EXR segfault #27847

Closed
opened 2011-07-03 11:36:48 +02:00 by Andre Lewis · 7 comments

%%%When rendering frames in the VSE I get a segfault when strips containing the current scene are rendered. It looks as if it is attempting to render scene strips as temporary EXR files, but there is memory contamination. Output varies, from nothing past the last EXR rendered, to the dump below. I've included the .blend file and one of the generated .exr files. I also get an error when loading the generated EXR files:

found bundled python: /home/annami/blender/subversion/trunk/install/linux2/2.58/python
OpenEXR-readPixels: ERROR: Error reading pixel data from image file "dummy". Tile (0, 0, 0, 0) is missing.
Saved session recovery to /tmp/quit.blend
Error: Not freed memory blocks: 2
IDProperty group len: 96 0x7faf0cc3f0f8
uiAfterFunc len: 720 0x7faf0cc3ff38

Blender quit

Tested with 2.58.1 r38013, and the official 2.58 release, x86_64.
2.6.38-10-generic #44-Ubuntu SMP Thu Jun 2 21:32:22 UTC 2011 x86_64 x86_64 x86_64 GNU/Linux

I've consistently gotten crashes in Fedora 13, and Ubuntu 11.04, core 2 Duo + nVidia Corporation G72M [GeForce Go 7400]

Append frame 54 Time: 00:00.00
Append frame 55 Time: 00:00.00
Append frame 56 Time: 00:00.00
write exr tmp file, 640x480, /tmp/BugTest2.blend_Intro.exr
write exr tmp file, 640x480, /tmp/BugTest2.blend_Intro1.exr
write exr tmp file, 640x480, /tmp/BugTest2.blend_Intro2.exr
write exr tmp file, 640x480, /tmp/BugTest2.blend_Intro3.exr
write exr tmp file, 640x480, /tmp/BugTest2.blend_Intro4.exr
write exr tmp file, 640x480, /tmp/BugTest2.blend_Intro5.exr
write exr tmp file, 640x480, /tmp/BugTest2.blend_Intro6.exr
write exr tmp file, 640x480, /tmp/BugTest2.blend_Intro7.exr
glibc detected bl: double free or corruption (!prev): 0x0000000005587010 ***
Backtrace:
/lib/x86_64-linux-gnu/libc.so.6(+0x78a8f)[0x7f43c2cdca8f]
/lib/x86_64-linux-gnu/libc.so.6(cfree+0x73)[0x7f43c2ce08e3]
/usr/lib/nvidia-current/tls/libnvidia-tls.so.270.41.06(+0x8eb)[0x7f43bd8d58eb]
Memory map:
00400000-02a8d000 r-xp 00000000 08:06 3671003 /home/alewis/blender/subversion/trunk/install/linux2/blender
02c8c000-02cb6000 r--p 0268c000 08:06 3671003 /home/alewis/blender/subversion/trunk/install/linux2/blender
02cb6000-0311f000 rw-p 026b6000 08:06 3671003 /home/alewis/blender/subversion/trunk/install/linux2/blender
0311f000-0317f000 rw-p 00000000 00:00 0
034a0000-06260000 rw-p 00000000 00:00 0 [heap]
40395000-4040c000 rw-p 00000000 00:00 0
410b4000-410b6000 r-xs 00000000 08:06 5505066 /tmp/glhZZAVo (deleted)
7f43a8259000-7f43a8386000 rw-s 00000000 00:04 17593864 /dev/zero (deleted)
7f43aa740000-7f43aa741000 ---p 00000000 00:00 0
7f43aa741000-7f43aaf41000 rw-p 00000000 00:00 0
7f43aaf41000-7f43aaf42000 ---p 00000000 00:00 0
7f43aaf42000-7f43ab742000 rw-p 00000000 00:00 0
7f43ab784000-7f43ab8b1000 rw-s 00000000 00:04 17593870 /dev/zero (deleted)
7f43ab8b1000-7f43ab9de000 rw-s 00000000 00:04 17593869 /dev/zero (deleted)
7f43ab9de000-7f43ab9ea000 r-xp 00000000 08:06 3411923 /lib/x86_64-linux-gnu/libnss_files-2.13.so
7f43ab9ea000-7f43abbe9000 ---p 0000c000 08:06 3411923 /lib/x86_64-linux-gnu/libnss_files-2.13.so
7f43abbe9000-7f43abbea000 r--p 0000b000 08:06 3411923 /lib/x86_64-linux-gnu/libnss_files-2.13.so
7f43abbea000-7f43abbeb000 rw-p 0000c000 08:06 3411923 /lib/x86_64-linux-gnu/libnss_files-2.13.so
7f43abbeb000-7f43abbf6000 r-xp 00000000 08:06 3411927 /lib/x86_64-linux-gnu/libnss_nis-2.13.so
7f43abbf6000-7f43abdf5000 ---p 0000b000 08:06 3411927 /lib/x86_64-linux-gnu/libnss_nis-2.13.so
7f43abdf5000-7f43abdf6000 r--p 0000a000 08:06 3411927 /lib/x86_64-linux-gnu/libnss_nis-2.13.so
7f43abdf6000-7f43abdf7000 rw-p 0000b000 08:06 3411927 /lib/x86_64-linux-gnu/libnss_nis-2.13.so
7f43abdf7000-7f43abdff000 r-xp 00000000 08:06 3411919 /lib/x86_64-linux-gnu/libnss_compat-2.13.so
7f43abdff000-7f43abffe000 ---p 00008000 08:06 3411919 /lib/x86_64-linux-gnu/libnss_compat-2.13.so
7f43abffe000-7f43abfff000 r--p 00007000 08:06 3411919 /lib/x86_64-linux-gnu/libnss_compat-2.13.so
7f43abfff000-7f43ac000000 rw-p 00008000 08:06 3411919 /lib/x86_64-linux-gnu/libnss_compat-2.13.so
7f43ac000000-7f43ac0b2000 rw-p 00000000 00:00 0
7f43ac0b2000-7f43b0000000 ---p 00000000 00:00 0
7f43b0057000-7f43b0184000 rw-s 00000000 00:04 17593868 /dev/zero (deleted)
7f43b0184000-7f43b02b1000 rw-s 00000000 00:04 17593867 /dev/zero (deleted)
7f43b02b1000-7f43b03de000 rw-s 00000000 00:04 17593866 /dev/zero (deleted)
7f43b03de000-7f43b03df000 ---p 00000000 00:00 0
7f43b03df000-7f43b0bdf000 rw-p 00000000 00:00 0
7f43b0bdf000-7f43b0ddf000 rw-s 02f4d000 00:05 9992 /dev/nvidia0
7f43b0ddf000-7f43b0fdf000 rw-s 034c7000 00:05 9992 /dev/nvidia0
7f43b0fdf000-7f43b105f000 rw-s 7763a000 00:05 9992 /dev/nvidia0
7f43b10f1000-7f43b10f2000 rw-p 00000000 00:00 0
7f43b10f2000-7f43b10f3000 ---p 00000000 00:00 0
7f43b10f3000-7f43b18f3000 rw-p 00000000 00:00 0
7f43b18f3000-7f43b1af3000 rw-s 77816000 00:05 9992 /dev/nvidia0
7f43b1af3000-7f43b1af5000 rw-s 00000000 08:06 5505066 /tmp/glhZZAVo (deleted)
7f43b1b41000-7f43b1c6e000 rw-s 00000000 00:04 17593865 /dev/zero (deleted)
7f43b1c6e000-7f43b1e35000 rw-p 00000000 00:00 0
7f43b1e36000-7f43b20be000 rw-p 00000000 00:00 0
7f43b20bf000-7f43b2245000 rw-p 00000000 00:00 0
7f43b2246000-7f43b22c8000 rw-p 00000000 00:00 0
7f43b22c8000-7f43b29bc000 r--p 00000000 08:06 6038820 /usr/lib/locale/locale-archive
7f43b29bc000-7f43b29bd000 rw-p 00000000 00:00 0
7f43b29bd000-7f43b29fd000 rw-s c2f06000 00:05 9992 /dev/nvidia0
7f43b29fd000-7f43b2afd000 rw-s 788d9000 00:05 9992 /dev/nvidia0
7f43b2afd000-7f43b2bfd000 rw-s 7785f000 00:05 9992 /dev/nvidia0
7f43b2bfd000-7f43b2c7c000 rw-p 00000000 00:00 0
7f43b2c7c000-7f43b3bb8000 rw-s c0000000 00:05 9992 /dev/nvidia0
7f43b3bb8000-7f43b3bc1000 r-xp 00000000 08:06 6040931 /usr/lib/x86_64-linux-gnu/libXrender.so.1.3.0
7f43b3bc1000-7f43b3dc1000 ---p 00009000 08:06 6040931 /usr/lib/x86_64-linux-gnu/libXrender.so.1.3.0
7f43b3dc1000-7f43b3dc2000 r--p 00009000 08:06 6040931 /usr/lib/x86_64-linux-gnu/libXrender.so.1.3.0
7f43b3dc2000-7f43b3dc3000 rw-p 0000a000 08:06 6040931 /usr/lib/x86_64-linux-gnu/libXrender.so.1.3.0
7f43b3dc3000-7f43b3dcc000 r-xp 00000000 08:06 6040899 /usr/lib/x86_64-linux-gnu/libXcursor.so.1.0.2
7f43b3dcc000-7f43b3fcb000 ---p 00009000 08:06 6040899 /usr/lib/x86_64-linux-gnu/libXcursor.so.1.0.2
7f43b3fcb000-7f43b3fcc000 r--p 00008000 08:06 6040899 /usr/lib/x86_64-linux-gnu/libXcursor.so.1.0.2
7f43b3fcc000-7f43b3fcd000 rw-p 00009000 08:06 6040899 /usr/lib/x86_64-linux-gnu/libXcursor.so.1.0.2
7f43b3fcd000-7f43b7fce000 rw-s 00000000 00:10 17590091 /dev/shm/pulse-shm-260079777
7f43b7fce000-7f43b7fcf000 ---p 00000000 00:00 0
7f43b7fcf000-7f43b87cf000 rw-p 00000000 00:00 0
7f43b87cf000-7f43b8817000 r-xp 00000000 08:06 6035444 /usr/lib/libFLAC.so.8.2.0
7f43b8817000-7f43b8a17000 ---p 00048000 08:06 6035444 /usr/lib/libFLAC.so.8.2.0
7f43b8a17000-7f43b8a18000 r--p 00048000 08:06 6035444 /usr/lib/libFLAC.so.8.2.0
7f43b8a18000-7f43b8a19000 rw-p 00049000 08:06 6035444 /usr/lib/libFLAC.so.8.2.0
7f43b8a19000-7f43b8a30000 r-xp 00000000 08:06 3411917 /lib/x86_64-linux-gnu/libnsl-2.13.so
7f43b8a30000-7f43b8c2f000 ---p 00017000 08:06 3411917 /lib/x86_64-linux-gnu/libnsl-2.13.so
7f43b8c2f000-7f43b8c30000 r--p 00016000 08:06 3411917 /lib/x86_64-linux-gnu/libnsl-2.13.so
7f43b8c30000-7f43b8c31000 rw-p 00017000 08:06 3411917 /lib/x86_64-linux-gnu/libnsl-2.13.so
7f43b8c31000-7f43b8c33000 rw-p 00000000 00:00 0 Aborted
alewis@alewis-VGN-SZ370P:~/blender/subversion/trunk$
%%%

%%%When rendering frames in the VSE I get a segfault when strips containing the current scene are rendered. It looks as if it is attempting to render scene strips as temporary EXR files, but there is memory contamination. Output varies, from nothing past the last EXR rendered, to the dump below. I've included the .blend file and one of the generated .exr files. I also get an error when loading the generated EXR files: found bundled python: /home/annami/blender/subversion/trunk/install/linux2/2.58/python OpenEXR-readPixels: ERROR: Error reading pixel data from image file "dummy". Tile (0, 0, 0, 0) is missing. Saved session recovery to /tmp/quit.blend Error: Not freed memory blocks: 2 IDProperty group len: 96 0x7faf0cc3f0f8 uiAfterFunc len: 720 0x7faf0cc3ff38 Blender quit Tested with 2.58.1 r38013, and the official 2.58 release, x86_64. 2.6.38-10-generic #44-Ubuntu SMP Thu Jun 2 21:32:22 UTC 2011 x86_64 x86_64 x86_64 GNU/Linux I've consistently gotten crashes in Fedora 13, and Ubuntu 11.04, core 2 Duo + nVidia Corporation G72M [GeForce Go 7400] Append frame 54 Time: 00:00.00 Append frame 55 Time: 00:00.00 Append frame 56 Time: 00:00.00 write exr tmp file, 640x480, /tmp/BugTest2.blend_Intro.exr write exr tmp file, 640x480, /tmp/BugTest2.blend_Intro1.exr write exr tmp file, 640x480, /tmp/BugTest2.blend_Intro2.exr write exr tmp file, 640x480, /tmp/BugTest2.blend_Intro3.exr write exr tmp file, 640x480, /tmp/BugTest2.blend_Intro4.exr write exr tmp file, 640x480, /tmp/BugTest2.blend_Intro5.exr write exr tmp file, 640x480, /tmp/BugTest2.blend_Intro6.exr write exr tmp file, 640x480, /tmp/BugTest2.blend_Intro7.exr ***glibc detected*** bl: double free or corruption (!prev): 0x0000000005587010 *** **Backtrace:** /lib/x86_64-linux-gnu/libc.so.6(+0x78a8f)[0x7f43c2cdca8f] /lib/x86_64-linux-gnu/libc.so.6(cfree+0x73)[0x7f43c2ce08e3] /usr/lib/nvidia-current/tls/libnvidia-tls.so.270.41.06(+0x8eb)[0x7f43bd8d58eb] **Memory map:** 00400000-02a8d000 r-xp 00000000 08:06 3671003 /home/alewis/blender/subversion/trunk/install/linux2/blender 02c8c000-02cb6000 r--p 0268c000 08:06 3671003 /home/alewis/blender/subversion/trunk/install/linux2/blender 02cb6000-0311f000 rw-p 026b6000 08:06 3671003 /home/alewis/blender/subversion/trunk/install/linux2/blender 0311f000-0317f000 rw-p 00000000 00:00 0 034a0000-06260000 rw-p 00000000 00:00 0 [heap] 40395000-4040c000 rw-p 00000000 00:00 0 410b4000-410b6000 r-xs 00000000 08:06 5505066 /tmp/glhZZAVo (deleted) 7f43a8259000-7f43a8386000 rw-s 00000000 00:04 17593864 /dev/zero (deleted) 7f43aa740000-7f43aa741000 ---p 00000000 00:00 0 7f43aa741000-7f43aaf41000 rw-p 00000000 00:00 0 7f43aaf41000-7f43aaf42000 ---p 00000000 00:00 0 7f43aaf42000-7f43ab742000 rw-p 00000000 00:00 0 7f43ab784000-7f43ab8b1000 rw-s 00000000 00:04 17593870 /dev/zero (deleted) 7f43ab8b1000-7f43ab9de000 rw-s 00000000 00:04 17593869 /dev/zero (deleted) 7f43ab9de000-7f43ab9ea000 r-xp 00000000 08:06 3411923 /lib/x86_64-linux-gnu/libnss_files-2.13.so 7f43ab9ea000-7f43abbe9000 ---p 0000c000 08:06 3411923 /lib/x86_64-linux-gnu/libnss_files-2.13.so 7f43abbe9000-7f43abbea000 r--p 0000b000 08:06 3411923 /lib/x86_64-linux-gnu/libnss_files-2.13.so 7f43abbea000-7f43abbeb000 rw-p 0000c000 08:06 3411923 /lib/x86_64-linux-gnu/libnss_files-2.13.so 7f43abbeb000-7f43abbf6000 r-xp 00000000 08:06 3411927 /lib/x86_64-linux-gnu/libnss_nis-2.13.so 7f43abbf6000-7f43abdf5000 ---p 0000b000 08:06 3411927 /lib/x86_64-linux-gnu/libnss_nis-2.13.so 7f43abdf5000-7f43abdf6000 r--p 0000a000 08:06 3411927 /lib/x86_64-linux-gnu/libnss_nis-2.13.so 7f43abdf6000-7f43abdf7000 rw-p 0000b000 08:06 3411927 /lib/x86_64-linux-gnu/libnss_nis-2.13.so 7f43abdf7000-7f43abdff000 r-xp 00000000 08:06 3411919 /lib/x86_64-linux-gnu/libnss_compat-2.13.so 7f43abdff000-7f43abffe000 ---p 00008000 08:06 3411919 /lib/x86_64-linux-gnu/libnss_compat-2.13.so 7f43abffe000-7f43abfff000 r--p 00007000 08:06 3411919 /lib/x86_64-linux-gnu/libnss_compat-2.13.so 7f43abfff000-7f43ac000000 rw-p 00008000 08:06 3411919 /lib/x86_64-linux-gnu/libnss_compat-2.13.so 7f43ac000000-7f43ac0b2000 rw-p 00000000 00:00 0 7f43ac0b2000-7f43b0000000 ---p 00000000 00:00 0 7f43b0057000-7f43b0184000 rw-s 00000000 00:04 17593868 /dev/zero (deleted) 7f43b0184000-7f43b02b1000 rw-s 00000000 00:04 17593867 /dev/zero (deleted) 7f43b02b1000-7f43b03de000 rw-s 00000000 00:04 17593866 /dev/zero (deleted) 7f43b03de000-7f43b03df000 ---p 00000000 00:00 0 7f43b03df000-7f43b0bdf000 rw-p 00000000 00:00 0 7f43b0bdf000-7f43b0ddf000 rw-s 02f4d000 00:05 9992 /dev/nvidia0 7f43b0ddf000-7f43b0fdf000 rw-s 034c7000 00:05 9992 /dev/nvidia0 7f43b0fdf000-7f43b105f000 rw-s 7763a000 00:05 9992 /dev/nvidia0 7f43b10f1000-7f43b10f2000 rw-p 00000000 00:00 0 7f43b10f2000-7f43b10f3000 ---p 00000000 00:00 0 7f43b10f3000-7f43b18f3000 rw-p 00000000 00:00 0 7f43b18f3000-7f43b1af3000 rw-s 77816000 00:05 9992 /dev/nvidia0 7f43b1af3000-7f43b1af5000 rw-s 00000000 08:06 5505066 /tmp/glhZZAVo (deleted) 7f43b1b41000-7f43b1c6e000 rw-s 00000000 00:04 17593865 /dev/zero (deleted) 7f43b1c6e000-7f43b1e35000 rw-p 00000000 00:00 0 7f43b1e36000-7f43b20be000 rw-p 00000000 00:00 0 7f43b20bf000-7f43b2245000 rw-p 00000000 00:00 0 7f43b2246000-7f43b22c8000 rw-p 00000000 00:00 0 7f43b22c8000-7f43b29bc000 r--p 00000000 08:06 6038820 /usr/lib/locale/locale-archive 7f43b29bc000-7f43b29bd000 rw-p 00000000 00:00 0 7f43b29bd000-7f43b29fd000 rw-s c2f06000 00:05 9992 /dev/nvidia0 7f43b29fd000-7f43b2afd000 rw-s 788d9000 00:05 9992 /dev/nvidia0 7f43b2afd000-7f43b2bfd000 rw-s 7785f000 00:05 9992 /dev/nvidia0 7f43b2bfd000-7f43b2c7c000 rw-p 00000000 00:00 0 7f43b2c7c000-7f43b3bb8000 rw-s c0000000 00:05 9992 /dev/nvidia0 7f43b3bb8000-7f43b3bc1000 r-xp 00000000 08:06 6040931 /usr/lib/x86_64-linux-gnu/libXrender.so.1.3.0 7f43b3bc1000-7f43b3dc1000 ---p 00009000 08:06 6040931 /usr/lib/x86_64-linux-gnu/libXrender.so.1.3.0 7f43b3dc1000-7f43b3dc2000 r--p 00009000 08:06 6040931 /usr/lib/x86_64-linux-gnu/libXrender.so.1.3.0 7f43b3dc2000-7f43b3dc3000 rw-p 0000a000 08:06 6040931 /usr/lib/x86_64-linux-gnu/libXrender.so.1.3.0 7f43b3dc3000-7f43b3dcc000 r-xp 00000000 08:06 6040899 /usr/lib/x86_64-linux-gnu/libXcursor.so.1.0.2 7f43b3dcc000-7f43b3fcb000 ---p 00009000 08:06 6040899 /usr/lib/x86_64-linux-gnu/libXcursor.so.1.0.2 7f43b3fcb000-7f43b3fcc000 r--p 00008000 08:06 6040899 /usr/lib/x86_64-linux-gnu/libXcursor.so.1.0.2 7f43b3fcc000-7f43b3fcd000 rw-p 00009000 08:06 6040899 /usr/lib/x86_64-linux-gnu/libXcursor.so.1.0.2 7f43b3fcd000-7f43b7fce000 rw-s 00000000 00:10 17590091 /dev/shm/pulse-shm-260079777 7f43b7fce000-7f43b7fcf000 ---p 00000000 00:00 0 7f43b7fcf000-7f43b87cf000 rw-p 00000000 00:00 0 7f43b87cf000-7f43b8817000 r-xp 00000000 08:06 6035444 /usr/lib/libFLAC.so.8.2.0 7f43b8817000-7f43b8a17000 ---p 00048000 08:06 6035444 /usr/lib/libFLAC.so.8.2.0 7f43b8a17000-7f43b8a18000 r--p 00048000 08:06 6035444 /usr/lib/libFLAC.so.8.2.0 7f43b8a18000-7f43b8a19000 rw-p 00049000 08:06 6035444 /usr/lib/libFLAC.so.8.2.0 7f43b8a19000-7f43b8a30000 r-xp 00000000 08:06 3411917 /lib/x86_64-linux-gnu/libnsl-2.13.so 7f43b8a30000-7f43b8c2f000 ---p 00017000 08:06 3411917 /lib/x86_64-linux-gnu/libnsl-2.13.so 7f43b8c2f000-7f43b8c30000 r--p 00016000 08:06 3411917 /lib/x86_64-linux-gnu/libnsl-2.13.so 7f43b8c30000-7f43b8c31000 rw-p 00017000 08:06 3411917 /lib/x86_64-linux-gnu/libnsl-2.13.so 7f43b8c31000-7f43b8c33000 rw-p 00000000 00:00 0 Aborted alewis@alewis-VGN-SZ370P:~/blender/subversion/trunk$ %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I wasn't able to redo any crash on OS X, will test on Linux later. The temporary exr files are written because Full Sample Anti-Aliasing is enabled, and it's ok that you can't read them, they are files that are only intended to be used as temporary storage for the render engine to reduce memory usage.%%%

%%%I wasn't able to redo any crash on OS X, will test on Linux later. The temporary exr files are written because Full Sample Anti-Aliasing is enabled, and it's ok that you can't read them, they are files that are only intended to be used as temporary storage for the render engine to reduce memory usage.%%%

%%%I managed to redo the crash on Linux, seems that somehow the graphics driver is still drawing pixels that were freed earlier, probably some sort of render result locking problem with the sequencer.%%%

%%%I managed to redo the crash on Linux, seems that somehow the graphics driver is still drawing pixels that were freed earlier, probably some sort of render result locking problem with the sequencer.%%%

%%%Developer note:
Not sure why, but happens such thing: allocation of RenderResult->rect32, assigning this buffer to ibuf in image_get_render_result, freeing render result, calling of image_get_render_result again, using ibuf->rect in image_buffer_rect_update. Problem that when renderresult was freed, ibuf points to wrong buffer. next call of ascquiring buffer doesn't make things easier to life -- new rect is null, so ibuf updating doesn't happen.

Attaching possible patch and assigning to Brecht.%%%

%%%Developer note: Not sure why, but happens such thing: allocation of RenderResult->rect32, assigning this buffer to ibuf in image_get_render_result, freeing render result, calling of image_get_render_result again, using ibuf->rect in image_buffer_rect_update. Problem that when renderresult was freed, ibuf points to wrong buffer. next call of ascquiring buffer doesn't make things easier to life -- new rect is null, so ibuf updating doesn't happen. Attaching possible patch and assigning to Brecht.%%%

%%%Brecht, i can remember we've discussed this in IRC, but can't remember if we considered this ok or it should be another kind of fix..%%%

%%%Brecht, i can remember we've discussed this in IRC, but can't remember if we considered this ok or it should be another kind of fix..%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#27847
No description provided.