Fix #27847: sequencer scene strip rendering crash, due to use of freed RenderResult.rect. Sergey did all the work to track this down, I'm just committing a slighty different fix.